--- a/app/src/main/res/layout/item_entry_child.xml
+++ b/app/src/main/res/layout/item_entry_child.xml
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:textSize="10dp"
+            android:textSize="11sp"
             android:text="Descrição:"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +50,7 @@
             android:id="@+id/text_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="10dp"
+            android:textSize="11sp"
             android:padding="4dp"
             android:text=""
             app:layout_constraintStart_toEndOf="@+id/text_show_descripion"
@@ -60,7 +60,7 @@
             android:id="@+id/text_show_quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="10dp"
+            android:textSize="11sp"
             android:padding="4dp"
             android:text="Quantidade:"
             android:textStyle="bold"
@@ -71,7 +71,7 @@
             android:id="@+id/text_quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="10dp"
+            android:textSize="11sp"
             android:padding="4dp"
             android:text=""
             app:layout_constraintStart_toEndOf="@+id/text_show_quantity"
@@ -81,7 +81,7 @@
             android:id="@+id/text_unity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="10dp"
+            android:textSize="11sp"
             android:padding="4dp"
             android:text=""
             app:layout_constraintBottom_toBottomOf="parent"
@@ -94,7 +94,7 @@
             android:layout_height="wrap_content"
             android:padding="4dp"
             android:layout_marginStart="8dp"
-            android:textSize="10dp"
+            android:textSize="11sp"
             android:text="Preço:"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -105,7 +105,7 @@
             android:id="@+id/text_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="10dp"
+            android:textSize="11sp"
             android:padding="4dp"
             android:text=""
             app:layout_constraintBottom_toBottomOf="parent"
@@ -117,7 +117,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:textSize="10dp"
+            android:textSize="11sp"
             android:layout_marginStart="8dp"
             android:text="Total/Há:"
             android:textStyle="bold"
@@ -129,7 +129,7 @@
             android:id="@+id/text_total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="10dp"
+            android:textSize="11sp"
             android:padding="4dp"
             android:text=""
             app:layout_constraintBottom_toBottomOf="parent"
