--- a/app/src/main/res/layout/fragment_area_manager.xml
+++ b/app/src/main/res/layout/fragment_area_manager.xml
@@ -65,6 +65,13 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
+            android:id="@+id/text_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+
+        <TextView
             android:id="@+id/text_area"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -72,9 +79,10 @@
             android:text="Talhões"
             android:textColor="@color/black"
             android:textSize="24sp"
+            app:layout_constraintTop_toBottomOf="@id/text_navigation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+            />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_area_entries"
