--- a/app/src/main/res/layout/fragment_vintage_manager.xml
+++ b/app/src/main/res/layout/fragment_vintage_manager.xml
@@ -73,6 +73,13 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <TextView
+            android:id="@+id/text_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />
+
+        <TextView
             android:id="@+id/text_vintage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -82,7 +89,7 @@
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />
+            app:layout_constraintTop_toBottomOf="@+id/text_navigation" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_vintage_entries"
