--- a/app/src/main/res/layout/fragment_add_property_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_property_dialog.xml
@@ -98,7 +98,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="4dp"
-                android:inputType="number"
+                android:inputType="number|numberDecimal"
                 android:hint="Dimensão da área"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
