--- a/app/src/main/res/layout/fragment_add_entries_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_entries_dialog.xml
@@ -128,6 +128,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="8dp"
+                android:inputType="number|numberDecimal"
+                android:digits="0123456789,."
                 android:hint="Adicionar quantidade"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -199,7 +201,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="8dp"
                 android:hint="Defina um preço"
-                android:inputType="number"
+                android:inputType="number|numberDecimal"
+                android:digits="0123456789,."
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/text_price"
