--- a/app/src/main/res/layout/fragment_entries.xml
+++ b/app/src/main/res/layout/fragment_entries.xml
@@ -42,7 +42,9 @@
                     android:layout_margin="16dp"
                     android:text="Propriedade:"
                     android:textColor="@color/black"
-                    android:textSize="20sp"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:textSize="11sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -74,7 +76,9 @@
                     android:layout_margin="16dp"
                     android:text="Talhão: "
                     android:textColor="@color/black"
-                    android:textSize="20sp"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:textSize="11sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -106,7 +110,9 @@
                     android:layout_margin="16dp"
                     android:text="Safra: "
                     android:textColor="@color/black"
-                    android:textSize="20sp"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:textSize="11sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
